deploy: b5879d82a27100d8164f60dac4083283fbb10b15

--- a/com/github/gradle/node/task/NodeTask.html
+++ b/com/github/gradle/node/task/NodeTask.html
@@ -498,7 +498,7 @@ extends <a href=BaseTask.html>BaseTask</a>
                                             <!--   -->
                                         </a>
                                             <h3>Methods inherited from class&nbsp;org.gradle.api.internal.AbstractTask</h3>
-                                            <code>appendParallelSafeAction, doNotTrackState, getAsDynamicObject, getConvention, getIdentityPath, getImpliesSubProjects, getOnlyIf, getReasonNotToTrackState, getRequiredServices, getSharedResources, getStandardOutputCapture, getTaskActions, getTaskIdentity, getTemporaryDirFactory, hasTaskActions, isEnabled, isHasCustomActions, prependParallelSafeAction, setImpliesSubProjects</code></li>
+                                            <code>appendParallelSafeAction, doNotTrackState, getAsDynamicObject, getConvention, getIdentityPath, getImpliesSubProjects, getLifecycleDependencies, getOnlyIf, getReasonNotToTrackState, getReasonTaskIsIncompatibleWithConfigurationCache, getRequiredServices, getSharedResources, getStandardOutputCapture, getTaskActions, getTaskIdentity, getTemporaryDirFactory, hasTaskActions, isCompatibleWithConfigurationCache, isEnabled, isHasCustomActions, notCompatibleWithConfigurationCache, prependParallelSafeAction, setImpliesSubProjects</code></li>
                                  
                                     <li class="blockList"><a id="methods.inherited.from.class.org.gradle.api.DefaultTask">
                                             <!--   -->
