deploy: 610c14569849d90e74cd3076df93dbbbea8e7c37

--- a/com/github/gradle/node/exec/ExecRunner.html
+++ b/com/github/gradle/node/exec/ExecRunner.html
@@ -244,7 +244,7 @@ public final class <span class="typeNameLabel"><a href=ExecRunner.html>ExecRunne
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            <td class="colFirst"><code>final ExecResult</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ExecRunner.html#execute(ProjectApiHelper,NodeExtension,ExecConfiguration)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> projectHelper, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=ExecConfiguration.html>ExecConfiguration</a> execConfiguration) </code>
                                             </th>
@@ -313,7 +313,7 @@ public final class <span class="typeNameLabel"><a href=ExecRunner.html>ExecRunne
                                           >
                                     <li class="blockList">
                                         <h4>execute</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ExecRunner.html#execute(ProjectApiHelper,NodeExtension,ExecConfiguration)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> projectHelper, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=ExecConfiguration.html>ExecConfiguration</a> execConfiguration)</pre>
+                                        <pre class="methodSignature"> final ExecResult <a href=ExecRunner.html#execute(ProjectApiHelper,NodeExtension,ExecConfiguration)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> projectHelper, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=ExecConfiguration.html>ExecConfiguration</a> execConfiguration)</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
