--- a/com/github/gradle/node/pnpm/exec/PnpmExecRunner.html
+++ b/com/github/gradle/node/pnpm/exec/PnpmExecRunner.html
@@ -258,7 +258,7 @@ public abstract class <span class="typeNameLabel"><a href=PnpmExecRunner.html>Pn
                                         </tr>
                                         
                                         <tr id="i1" class="rowColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            <td class="colFirst"><code>final ExecResult</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=PnpmExecRunner.html#executePnpmCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executePnpmCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> extension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variants) </code>
                                             </th>
@@ -342,7 +342,7 @@ public abstract class <span class="typeNameLabel"><a href=PnpmExecRunner.html>Pn
                                           >
                                     <li class="blockList">
                                         <h4>executePnpmCommand</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=PnpmExecRunner.html#executePnpmCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executePnpmCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> extension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variants)</pre>
+                                        <pre class="methodSignature"> final ExecResult <a href=PnpmExecRunner.html#executePnpmCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executePnpmCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> extension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variants)</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
