--- a/com/github/gradle/node/exec/NodeExecRunner.html
+++ b/com/github/gradle/node/exec/NodeExecRunner.html
@@ -244,7 +244,7 @@ public final class <span class="typeNameLabel"><a href=NodeExecRunner.html>NodeE
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            <td class="colFirst"><code>final ExecResult</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=NodeExecRunner.html#execute(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../variant/VariantComputer.html>VariantComputer</a> variantComputer) </code>
                                             </th>
@@ -313,7 +313,7 @@ public final class <span class="typeNameLabel"><a href=NodeExecRunner.html>NodeE
                                           >
                                     <li class="blockList">
                                         <h4>execute</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=NodeExecRunner.html#execute(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../variant/VariantComputer.html>VariantComputer</a> variantComputer)</pre>
+                                        <pre class="methodSignature"> final ExecResult <a href=NodeExecRunner.html#execute(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>execute</a>(<a href=../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../NodeExtension.html>NodeExtension</a> extension, <a href=NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../variant/VariantComputer.html>VariantComputer</a> variantComputer)</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
