--- a/com/github/gradle/node/yarn/exec/YarnExecRunner.html
+++ b/com/github/gradle/node/yarn/exec/YarnExecRunner.html
@@ -258,7 +258,7 @@ public abstract class <span class="typeNameLabel"><a href=YarnExecRunner.html>Ya
                                         </tr>
                                         
                                         <tr id="i1" class="rowColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            <td class="colFirst"><code>final ExecResult</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=YarnExecRunner.html#executeYarnCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executeYarnCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> nodeExtension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variantComputer) </code>
                                             </th>
@@ -342,7 +342,7 @@ public abstract class <span class="typeNameLabel"><a href=YarnExecRunner.html>Ya
                                           >
                                     <li class="blockList">
                                         <h4>executeYarnCommand</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=YarnExecRunner.html#executeYarnCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executeYarnCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> nodeExtension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variantComputer)</pre>
+                                        <pre class="methodSignature"> final ExecResult <a href=YarnExecRunner.html#executeYarnCommand(ProjectApiHelper,NodeExtension,NodeExecConfiguration,VariantComputer)>executeYarnCommand</a>(<a href=../../util/ProjectApiHelper.html>ProjectApiHelper</a> project, <a href=../../NodeExtension.html>NodeExtension</a> nodeExtension, <a href=../../exec/NodeExecConfiguration.html>NodeExecConfiguration</a> nodeExecConfiguration, <a href=../../variant/VariantComputer.html>VariantComputer</a> variantComputer)</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
