--- a/com/github/gradle/node/util/package-summary.html
+++ b/com/github/gradle/node/util/package-summary.html
@@ -108,16 +108,18 @@ var pathtoroot = "../../../../../";
     <div class="typeSummary">
 
 <table>
-<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<caption><span>Interface Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
-<th class="colFirst" scope="col">Object</th>
+<th class="colFirst" scope="col">Interface</th>
 <th class="colLast" scope="col">Description</th>
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=PlatformHelper.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=NodeVersionSource.NodeVersionSourceParameters.html>NodeVersionSourceParameters</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=ProjectApiHelper.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=HelperExecution.html>HelperExecution</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=ProjectApiHelper.html>ProjectApiHelper</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
@@ -141,13 +143,15 @@ var pathtoroot = "../../../../../";
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=PlatformHelper.html>PlatformHelper</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=NodeVersionSource.html>NodeVersionSource</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DefaultProjectApiHelper.html>DefaultProjectApiHelper</a></th><td class="colLast">Used in Gradle 6.6 and newer.</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PlatformHelper.html>PlatformHelper</a></th><td class="colLast"></td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=LegacyProjectApiHelper.html>LegacyProjectApiHelper</a></th><td class="colLast">Used to support Gradle versions older than 6.</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=DefaultProjectApiHelper.html>DefaultProjectApiHelper</a></th><td class="colLast">Used in Gradle 6.6 and newer.</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PlatformHelperKt.html>PlatformHelperKt</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=LegacyProjectApiHelper.html>LegacyProjectApiHelper</a></th><td class="colLast">Used to support Gradle versions older than 6.</td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PlatformHelperKt.html>PlatformHelperKt</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
@@ -164,14 +168,16 @@ var pathtoroot = "../../../../../";
     <div class="typeSummary">
 
 <table>
-<caption><span>Interface Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
-<th class="colFirst" scope="col">Interface</th>
+<th class="colFirst" scope="col">Object</th>
 <th class="colLast" scope="col">Description</th>
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=ProjectApiHelper.html>ProjectApiHelper</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PlatformHelper.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=ProjectApiHelper.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
