deploy: 3ea8a876119ea9c73a0d2d0896e2d0cf7f23eab6

--- a/com/github/gradle/node/variant/package-summary.html
+++ b/com/github/gradle/node/variant/package-summary.html
@@ -116,6 +116,8 @@ var pathtoroot = "../../../../../";
 <tbody>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=VariantComputer.html>VariantComputer</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=VariantComputerKt.html>VariantComputerKt</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
