deploy: 0d3f3c9033fd336df78047c86818fa6421622011

--- a/index-files/index-8.html
+++ b/index-files/index-8.html
@@ -161,7 +161,7 @@ var pathtoroot = "../";
                 
 
             </dt>
-            <dd>Returns true if the given map of environment variables already has proxy settings configured.</dd>
+            <dd>Returns true if the given map of environment variables has any proxy settings configured.</dd>
 
         
             <dt>
