deploy: 46c1372c2c7ee839532051456d7dc8593dfad110

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ var pathtoroot = "";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=com/github/gradle/node/package-summary.html>com.github.gradle.node</a></th><td class="colLast"></td></tr>
 
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=com/github/gradle/node/bun/exec/package-summary.html>com.github.gradle.node.bun.exec</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=com/github/gradle/node/bun/task/package-summary.html>com.github.gradle.node.bun.task</a></th><td class="colLast"></td></tr>
+
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=com/github/gradle/node/exec/package-summary.html>com.github.gradle.node.exec</a></th><td class="colLast"></td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=com/github/gradle/node/npm/exec/package-summary.html>com.github.gradle.node.npm.exec</a></th><td class="colLast"></td></tr>
